--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,29 +4,39 @@
   width: 100%;
   top: 0;
   left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   background-color: #006aaf;
   color: #f8f8f8;
   pointer-events: none;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
-.img{
-    width: 50%;
-    opacity: 50%;
-    object-fit: contain;
+.img {
+  width: 50%;
+  opacity: 0.5;
+  -o-object-fit: contain;
+  object-fit: contain;
 }
-.para{
-    font-size: 16px;
-    opacity: 85%;
-    padding-top: 5px;
+.para {
+  font-size: 16px;
+  opacity: 0.85;
+  padding-top: 5px;
 }
 
-.heading{
-  opacity: 95%;
+.heading {
+  opacity: 0.95;
 }
-.text-container{
+.text-container {
   text-align: center;
   width: 50%;
 }
